<resources>
    <string name="app_name">MyKowel</string>
    <string name="button_login">Увійти</string>
    <string name="button_reg">Зареєструватись</string>
    <string name="content_description_image_hello">hello</string>
    <string name="content_description_image_registration">registration</string>
    <string name="content_description_image_login">login</string>
    <string name="nav_home">Головна</string>
    <string name="nav_bazar">Базар</string>
    <string name="nav_contacts">Контакти</string>
    <string name="nav_other">Інше</string>
    <string name="text_sign_in">Вхід</string>
    <string name="text_sign_up">Реєстрація</string>
    <string name="txt_login">Логін</string>
    <string name="txt_name">Ім\'я</string>
    <string name="txt_email">Електронна пошта</string>
    <string name="txt_phone">Телефон</string>
    <string name="txt_password">Пароль</string>
    <string name="shared_preferences_user_data">dataAboutUser</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Ласкаво просимо, ковельчанине</string>
    <string name="txt_title">Назва товару</string>
    <string name="txt_description">Опис</string>
    <string name="txt_select_category">Категогірія</string>
    <string name="txt_price">Ціна</string>
    <string name="descriptionTwoPart">Увійди щоби отримати доступ до системи</string>
    <string name="descriptionOnePart">Помічник \"My Kovel\", радий тебе бачити Усе що тобі потрібно, відтепер у твоїй кишені Адже помічник створений спеціально для того, щоби ти мав усе необхідне в одному місці </string>
    <string name="action_button_title">title</string>
    <string-array name="categories_bazar">
        <item>Виберіть категорію</item>
        <item>Одяг і взуття</item>
        <item>Їжа та продукти</item>
        <item>Для саду та городу</item>
        <item>Товари для дітей</item>
        <item>Товари для побуту</item>
        <item>Електроніка та механіка</item>
        <item>Нерухомість</item>
    </string-array>
    <string name="txt_delete">Видалити</string>
    <string name="txt_delete_account">Видалити акаунт</string>
    <string name="txt_exit">Вийти</string>


</resources>