<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.reg.RegActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
>

            <!--            android:background="@drawable/edit_text_border"-->
            <!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"

                android:contentDescription="@string/content_description_image_registration"
                app:layout_constraintBottom_toTopOf="@+id/loginEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/ic_logo_img" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextInputLayoutLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/txt_login"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user_add">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextInputEditTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextInputLayoutName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/txt_name"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_user_edit_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextInputEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextInputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/txt_email"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_sms">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextInputLayoutPhone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/txt_phone"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="9"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:prefixText="+380"
                app:prefixTextColor="@color/purple_700"
                app:startIconDrawable="@drawable/ic_call">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextInputEditTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="9" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginTextInputLayoutPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="32dp"
                android:hint="@string/txt_password"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/color_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLogin"
                app:layout_constraintVertical_bias="0.0"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginTextInputEditTextPassword"
                    android:layout_width="match_parent"

                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textYouHaveAccountTextView"
                    android:layout_width="160dp"
                    android:layout_height="19dp"
                    android:text="Уже зареэстровані?"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textBtnRegTextView"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

                <TextView
                    android:id="@+id/textBtnLoginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/button_login"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textYouHaveAccountTextView"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <!--    android:onClick="RegUser"-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/round_button" />

</androidx.constraintlayout.widget.ConstraintLayout>