<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_item_bazars"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.activities.AddNewItemBazarActivity">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/white"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:navigationIcon="@drawable/ic_arrow_left"-->
<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->

<!--        <TextView-->
<!--            android:id="@+id/title_addItem_bazar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="sans-serif-medium"-->
<!--            android:text="@string/txt_title_add_item_bazar"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/h3"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
<!--            app:layout_constraintVertical_bias="0.036" />-->


<!--    </androidx.appcompat.widget.Toolbar>-->


    <ScrollView

        android:id="@+id/scrollView"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/txtTitleNewItemBazar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/txt_title"
                android:textColor="@color/black" />
<!--            android:id="@+id/textInputLayoutLogin"-->
<!--            android:id="@+id/titleAddItemEditText"-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTxtIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/txt_title"
                app:hintTextColor="@color/color_hint"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleTxtIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtDescriptionNewItemBazar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/txt_description"

                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTxtIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/txt_description"

                app:hintTextColor="@color/color_hint"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionTxtIET"
                    android:layout_width="match_parent"
                    android:layout_height="177dp"
                    android:maxLength="500"
                    android:gravity="top|left"/>
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/txtCategoryNewItemBazar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:text="@string/txt_select_category"

                android:textColor="@color/black" />


            <Spinner
                android:id="@+id/spinner"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txt_price"
                android:textColor="@color/black" />
<!--            android:id="@+id/priceAddItemEditText"-->
<!--            android:id="@+id/textInputLayoutEmail"-->
<!---->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceTxtIL"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/txt_price"
                app:hintTextColor="@color/color_hint"
                app:boxStrokeColor="@color/purple_500"
                app:boxStrokeErrorColor="@color/red"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceTxtIET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageAddItemBazar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginVertical="20dp"
                android:src="@drawable/ic_no_photo_found"


                />

            <Button
                android:id="@+id/btn_add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="Добавити фото" />

            <Button
                android:id="@+id/btn_send_item_bazar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="відправити" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>